Bug 46073 - Page Layout Guides (margins, headers, footers) No Longer Visible
Summary: Page Layout Guides (margins, headers, footers) No Longer Visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: x86 (IA32) All
: medium normal
Assignee: Cédric Bosdonnat
URL: http://lists.freedesktop.org/archives...
Whiteboard: target:3.6.0
Keywords:
: 46305 46829 51292 (view as bug list)
Depends on:
Blocks: Page
  Show dependency treegraph
 
Reported: 2012-02-14 16:17 UTC by noibsguy
Modified: 2019-04-03 09:16 UTC (History)
15 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sampld document (160.96 KB, application/vnd.oasis.opendocument.text)
2012-02-14 22:20 UTC, Rainer Bielefeld Retired
Details
place picture in a multiple column layout (16.08 KB, application/vnd.oasis.opendocument.text)
2012-02-15 01:28 UTC, Fernand
Details
Screenshot LibO Master 2012-02-29: fdo#46073.png (150.34 KB, image/png)
2012-02-29 13:57 UTC, manj_k
Details
Screen snapshots of Apple's implementation of "View Layout" (175.13 KB, application/pdf)
2012-08-26 19:44 UTC, noibsguy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description noibsguy 2012-02-14 16:17:03 UTC
I realize that removing the page layout guides in Writer is a new "feature" of LO 3.5; however, most of those posting to my thread today in the LO "Users" forum consider this to be a regression bug.  That is how I'm submitting it.  Removing a significant feature, rather than making it an option, seems to be a regression bug.

When doing basic page layout (multiple columns & moving graphics objects around) having the margin guides is very useful.  Clearly, not having them is not a deal killer, but the question is why?  If having page layout guides was available under the "View" menu, wouldn't LO be a stronger product that it is now without having that option at all?

In Apple's Pages word processing, under the "View" menu is a the command "View Page Layout."  The same should be added to later versions of LO.

Please feel free to reclassify this as a feature request; however, that's not how I view it.
Comment 1 Rainer Bielefeld Retired 2012-02-14 22:18:12 UTC
I also see it as a regression. I believe for many page formatting tasks you need to know exactly where the text area borders are, the new design does not show the borders. 

I really preferred the old border view (but I enjoy the new heading-footer-editing-features). For editing a document it was more useful, and for "presenting" documents I save them as "readonly", so that no such edit aids will be visible.

But of course, other users might have different needs. I believe here some refining will be possible.
Comment 2 Rainer Bielefeld Retired 2012-02-14 22:20:35 UTC
Created attachment 57063 [details]
Sampld document

demonstrating one of the problems caused by the new design.
Comment 3 spYre 2012-02-15 01:22:40 UTC
I agree with Noib.
I'm really annoyed with that new "feature" and a kind of "view layout" option would be very welcome.
Thanks for taking care about this.
Comment 4 Fernand 2012-02-15 01:28:09 UTC
Created attachment 57071 [details]
place picture in a multiple column layout
Comment 5 Fernand 2012-02-15 01:32:54 UTC
the column borders are gone also

placing a picture in a multiple column layout becomes imposible

use al the "automated alignment" tricks and trie to place the picture is column 2 or 3
Comment 6 tommy27 2012-02-15 02:31:10 UTC
please bring the page layout guides back in LibO 3.5.1

feedback about this new feature is negative

you should at least put an option to let the user choose between the old and new behavious
Comment 7 Cor Nouws 2012-02-15 03:01:55 UTC
Ah great joy :-)
For what reason do we have nightly builds, beta's, UX lists ...

http://lists.freedesktop.org/archives/libreoffice-ux-advise/2012-February/000830.html
Comment 8 Cédric Bosdonnat 2012-02-15 06:35:55 UTC
not a regression since this is not a bug but a new feature.
Comment 9 Cédric Bosdonnat 2012-02-15 06:42:05 UTC
(In reply to comment #0)
> I realize that removing the page layout guides in Writer is a new "feature" of LO 3.5; however, most of those posting to my thread today in the LO "Users"
> forum consider this to be a regression bug.  That is how I'm submitting it.  Removing a significant feature, rather than making it an option, seems to be a
> regression bug.

They were not removed, they are only less intrusive.
 
> Please feel free to reclassify this as a feature request; however, that's not how I view it.

It is a feature change rather than a bug indeed.
Comment 10 noibsguy 2012-02-15 06:59:17 UTC
Creating a default page layout that doesn't include visible margins and column boundaries is a feature.  Not retaining a preference setting so that those doing multi-column page layout can see column boundaries is, in my view, a regression bug.  It is now much, much more difficult to do multi-column page layout in terms of positioning graphical objects.  I would like to believe that this was a simple oversight (not retaining the preference setting).  If not, then how is this new feature an improvement?
Comment 11 Fabian Rodriguez 2012-02-15 07:02:12 UTC
Thank you for reporting this, I have had several comments about this change from people around me who upgraded yesterday.

I also view the lack of an option to enable this layout guide as an important regression. This should be targetted for a point release and integrated into regression testing (is there any?). I am not close to development, but regression testing should catch the problems introduced when improving the UI too.
Comment 12 Fabian Rodriguez 2012-02-15 07:14:17 UTC
My suggestion for implementing an option to make the layout guide visible would be:
- Add a button to the toolbar
- Add the option under Tools > Options > LibreOffice Writer > View > View section

I suggested a workaround in the mailing list, by enabling "Visible Grid" under Tools > Options > LibreOffice Writer > Grid, however it is barely visible (that would be bug #46110).
Comment 13 noibsguy 2012-02-15 07:53:57 UTC
And showing the grid doesn't show columns.  The grid also appears in the space between the columns.
Comment 14 Fabian Rodriguez 2012-02-15 08:28:03 UTC
Here is another workaround by Dan Lewis, on the users@libo ML:

 Another suggestion: Use F11 to open the Styles & Formating dialog. Click the Page styles icon. The right click the Default page style. Using the Border tab, Set All Four Borders. Then select the width and color of the border. Click OK.

This could also be done with a page style you want to use. Granted when printing, it does require opening the page style and selecting Set No Borders in this tab.
Comment 15 vitruss 2012-02-15 22:49:30 UTC
For me, as for person working much with text and images in LO, the borders are necessary.

Here are the solutions I see:

1. Show borders with non-printing characters enabled.
Showing non-printing characters is for advanced users, so, I believe, they prefer functionality to nice look and definitely know why they enable this not so nice looking mode.

2. For the people working with images a lot. The idea is to show border with thin or dashed line only when user moves/resizes an object (table, Image, etc.). And the other thing is making border appear when something is snapping to it. I think it will be useful, when object snaps to the border and you see, that it snaps to the border exactly, but not to the other grid line.

3. Another option is to put the check box in page style with something like "do not print page borders". So each user can add the borders he wants but don't need to disable them before printing.
Comment 16 Rainer Bielefeld Retired 2012-02-15 23:34:42 UTC
I believe discussion should be in mailing list, discussion has already started in thread 'The "no border text" feature in Writer 3.5 is not complete' (See Comment 8)
Comment 17 Not Assigned 2012-02-20 06:42:08 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7794baf89e74fc8308c8e1505f47d60b6547465f

fdo#46073: Implemented soft boundaries only w/o non-printing chars
Comment 18 Cédric Bosdonnat 2012-02-20 06:50:09 UTC
fixed as per JFN's ideas on ux-advise (http://lists.freedesktop.org/archives/libreoffice-ux-advise/2012-February/000856.html).
Comment 19 vitruss 2012-02-26 18:57:34 UTC
*** Bug 46305 has been marked as a duplicate of this bug. ***
Comment 20 NoOp 2012-02-28 19:36:35 UTC
https://bugs.freedesktop.org/show_bug.cgi?id=46305 has been removed as a duplicate of this bug and reopened (46305 is filed against 3.5.x). Please see 46305 for details. This bug 46073 shows a "target:3.6.0". Futher, no debian or Windows version is available for testing via:
http://dev-builds.libreoffice.org/daily/
Sample:
http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/
Index of /daily/Linux-x86_10-Release_Configuration/master
Icon  Name                                       Last modified      Size  Description[DIR] Parent Directory                                                -
Comment 21 Rainer Bielefeld Retired 2012-02-28 20:56:04 UTC
*** Bug 46305 has been marked as a duplicate of this bug. ***
Comment 22 manj_k 2012-02-29 13:55:53 UTC
Due to comment #20:
Tested (on WinXP 32b) with LibO Master
LOdev 3.6.0alpha0+ 
Build ID: 9518535-d09cf17-8a74106-c695ecd-16afab
[master~2012-02-29_04.21.51_LibO-Dev_3.6.0alpha0_Win_x86_install_en-US.msi]

See attached screenshot 'fdo#46073.png'.
Comment 23 manj_k 2012-02-29 13:57:19 UTC
Created attachment 57833 [details]
Screenshot LibO Master 2012-02-29: fdo#46073.png
Comment 24 vitriol 2012-03-01 07:50:45 UTC
*** Bug 46829 has been marked as a duplicate of this bug. ***
Comment 25 gleppert 2012-03-19 04:32:04 UTC
.
Comment 26 manj_k 2012-06-21 15:19:43 UTC
*** Bug 51292 has been marked as a duplicate of this bug. ***
Comment 27 Nemesis19 2012-08-05 20:18:00 UTC
Dear developers,

I understand your point of view, but the explaination "They were not removed, they are only less intrusive." seems to me something to say "hey we are putting something new in Writer" but the problem that those less intrusive borders really make worse the usability and functionality.

It seems to me that you don't use Writer too much to understand. For me those borders without the non-printing characters saved my productivity during for example the writing of my university thesis.

Is it possible to reconsider this feauture? if yes where? I am still stuck to libreoffice 3.4.6 because of this and from this discussion it seems many others feel the same.

My solution is to separate borders from non-printing characters.

Thank you for your attention
Comment 28 Jean-Baptiste Faure 2012-08-06 05:23:46 UTC
(In reply to comment #27)
> Dear developers,
> [...]
> My solution is to separate borders from non-printing characters.

Perhaps you don't known that you can choose the non-printing characters you want to see ?
Tools > Options > LibreOffice Writer > Writing Aids

Please try LO 3.6.0.4

Best regards. JBF
Comment 29 Josef.Latt 2012-08-08 16:26:25 UTC
(In reply to comment #27)
> Dear developers,
> 
> I understand your point of view, but the explaination "They were not removed,
> they are only less intrusive." seems to me something to say "hey we are putting
> something new in Writer" but the problem that those less intrusive borders
> really make worse the usability and functionality.
> 
> It seems to me that you don't use Writer too much to understand. For me those
> borders without the non-printing characters saved my productivity during for
> example the writing of my university thesis.
> 
> Is it possible to reconsider this feauture? if yes where? I am still stuck to
> libreoffice 3.4.6 because of this and from this discussion it seems many others
> feel the same.
> 
> My solution is to separate borders from non-printing characters.
> 
> Thank you for your attention

+1
Comment 30 Josef.Latt 2012-08-08 16:30:32 UTC
(In reply to comment #28)
> (In reply to comment #27)
> > Dear developers,
> > [...]
> > My solution is to separate borders from non-printing characters.
> 
> Perhaps you don't known that you can choose the non-printing characters you
> want to see ?
> Tools > Options > LibreOffice Writer > Writing Aids

This is IMHO nonsens.
Comment 31 noibsguy 2012-08-08 17:04:09 UTC
I just downloaded LO 3.6.0.4 and finally saw how page guide could be re-enabled.  Given that I'm the originator of this bug thread I though I would leave a final comment.

First, I'm glad that I can view page guides again.  Thank you for that.

Second, page guides are a formatting help and have nothing to do with non-printing characters--NOTHING at all.  The odds that a newbie will be able to discover how to re-enable page guides are very long indeed.

I would strongly argue for taking the subroutine(s) the involve showing the page guides and putting pairing them with a menu command underneath either the "View" or "Format" menu titles.  Having "View Page Guides" as a menu option seems completely obvious to me.

However, I don't expect this to happen.  Shortly after I reported this "bug" I had a number of email messages with some of the Document Foundation "powers-that-be" who took offense to this regression bug classified as a bug at all. I was portrayed as a 20th-century caveman for wanting something as old-fashioned as page guides.

I guess I should also be grateful that "Save as..." still exists under the File menu (without using the Mac option key).
Comment 32 Josef.Latt 2012-08-09 07:03:55 UTC
(In reply to comment #31)
> 
> Second, page guides are a formatting help and have nothing to do with
> non-printing characters--NOTHING at all.  The odds that a newbie will be able
> to discover how to re-enable page guides are very long indeed.

+1
 
> I would strongly argue for taking the subroutine(s) the involve showing the
> page guides and putting pairing them with a menu command underneath either the
> "View" or "Format" menu titles.  Having "View Page Guides" as a menu option
> seems completely obvious to me.

+1

> However, I don't expect this to happen.  Shortly after I reported this "bug" I
> had a number of email messages with some of the Document Foundation
> "powers-that-be" who took offense to this regression bug classified as a bug at
> all. I was portrayed as a 20th-century caveman for wanting something as
> old-fashioned as page guides.

Some things in LO are selled by them as features, because of readability (AFAIK) like the unvisible gridlines in calc cells with backgroundcolor, which has been made changeable after userprotest.

To combine showing the pages layout guides with the non-printing characters is IMHO a joke.
Comment 33 Glutanimate 2012-08-12 15:27:28 UTC
(In reply to comment #31)
> I just downloaded LO 3.6.0.4 and finally saw how page guide could be
> re-enabled.  Given that I'm the originator of this bug thread I though I would
> leave a final comment.
> 
> First, I'm glad that I can view page guides again.  Thank you for that.
> 
> Second, page guides are a formatting help and have nothing to do with
> non-printing characters--NOTHING at all.  The odds that a newbie will be able
> to discover how to re-enable page guides are very long indeed.
> 
> I would strongly argue for taking the subroutine(s) the involve showing the
> page guides and putting pairing them with a menu command underneath either the
> "View" or "Format" menu titles.  Having "View Page Guides" as a menu option
> seems completely obvious to me.
> 
> However, I don't expect this to happen.  Shortly after I reported this "bug" I
> had a number of email messages with some of the Document Foundation
> "powers-that-be" who took offense to this regression bug classified as a bug at
> all. I was portrayed as a 20th-century caveman for wanting something as
> old-fashioned as page guides.
> 
> I guess I should also be grateful that "Save as..." still exists under the File
> menu (without using the Mac option key).

I agree wholeheartedly. Even tough I am glad that some of the old functionality has been restored with this version, I still can't understand why you would combine such different layout helpers like non-printing characters and page guides. 

In my workflow I heavily rely on positioning images in relation to the page dimensions. Instead of just copying the images and moving them I now have to switch the page border option to "on" each time I add a picture and turn it off as soon as I go back to text editing. Due to the non-printable characters being so intrusive, it is not a viable option for me to keep the setting on at all times.

I would greatly appreciate it if the LO team could find a way to integrate  a simple independent menu option to display the layout guides without having to activate non-printable characters at the same time.
Comment 34 Glutanimate 2012-08-26 18:22:49 UTC
(In reply to comment #28)
> (In reply to comment #27)
> > Dear developers,
> > [...]
> > My solution is to separate borders from non-printing characters.
> 
> Perhaps you don't known that you can choose the non-printing characters you
> want to see ?
> Tools > Options > LibreOffice Writer > Writing Aids
> 
> Please try LO 3.6.0.4
> 
> Best regards. JBF

That feature is buggy at the moment. See here for reference: bug 54073 .
Comment 35 Cor Nouws 2012-08-26 19:03:37 UTC
(In reply to comment #34)

> That feature is buggy at the moment. See here for reference: bug 54073 .

See my comment there.
Comment 36 noibsguy 2012-08-26 19:44:35 UTC
Created attachment 66149 [details]
Screen snapshots of Apple's implementation of "View Layout"

The attached PDF document shows an obvious way to display page layouts (page guides) at the user's request.  There is explanatory text included.  It's a much cleaner and more obvious way then hiding the page guides within the invisible characters preference.
Comment 37 Felix 2012-09-08 03:32:23 UTC
Confirm that the small "L" page text boundary appearence is still present in 3.6.1.2. When I first saw those after upgrading, I assumed something about my configuration was broken and wasted almost an hour deleting my preferences dir, etc. trying to figure out what would cause the text boundaries to not work any more.

Then I Googled it and found out it was a feature. Others have already found words to express the frustration I felt. Clearly someone thought no one was using the text boundaries in their old form.

I doubt anyone implementing the little L-shaped marks envisioned that they would be useful; it looks like it was done purely for aesthetics. Taking away a real feature in order to do that is a crime against software.

I'm presently using the "the full boundaries show up if you show non-printing characters" work around, and am a little bit mollified, but not by much. I think that workaround is a case of someone not wanting to put something back exactly the way it was, because doing so would feel like anti-progress.

That's really too bad.

Whoever did it: putting something back the way it was would be an admirable demonstration of maturity and courage. I know everything about the software world says we have to advance, advance, advance, change, change, change -- and a cultural force like that is difficult to go against. But please, for our sakes, let's not let another good feature die in the name of "it looks prettier this way" -- if we wanted that, we'd be using MS Office.
Comment 38 Cor Nouws 2012-11-05 16:15:31 UTC
Page Layout Guides (margins, headers, footers) are Visible by setting the non-printing characters (menu View / toolbar / Ctrl-F10) 
 > fixed
Comment 39 Cor Nouws 2012-11-05 16:16:26 UTC
that's what I said...
Comment 40 Josef.Latt 2012-11-05 16:57:52 UTC
(In reply to comment #39)
> that's what I said...

And that's what I did:

I replaced LO with AOO.
Comment 41 Matic 2012-11-08 16:31:07 UTC
Mijau

I'm not undestant this.

What shuld I set up in the
"setting the non-printing characters"?

Is this also solved in versino 3.5.7? If yes, I cant't find this solutino.


Ponny
Comment 42 Cor Nouws 2012-11-08 22:06:31 UTC
It is fixed in 3.6, not in 3.5.x.
@ matic: pls look in the help for non printing characters or ask support from user lists and such. Regards,
Cor
Comment 43 noibsguy 2012-11-08 23:34:43 UTC
I reported this "bug" (or regression) originally.  I just wanted to give a big thanks for those involved with the most recent change/fix.  Adding a new menu item to the "View" menu is perfect.  Thank you so much.
Comment 44 JohnHardy 2012-11-12 10:26:09 UTC
The [View/Text Boundaries] approach only turns corner marks on and off. No sign of full boundaries like the old days. I'm using Version 3.6.3.2 (Build ID: 58f22d5) under Windows XP. You are welcome to add my name to the list of people that want the full boundaries back without having to jump through hoops to do it. The full boundaries are very helpful for many situations, even if only to notice that there is a space as the first character of a line of text - a space that doesn't belong there. Without the full border there is no easy way to tell. Hey - let's get rid of all the lane markings on expressways. Just a little mark every half mile or so.

If I'm missing something obvious, please accept my apologies.
Comment 45 Cor Nouws 2014-02-03 14:21:51 UTC
Note: Suggestion for improvement in bug 74386
Comment 46 burnuser2 2016-01-25 13:02:09 UTC
As stated many times: The visibility of Page Layout Guides and Non-Printable characters is NOT the same!
And there is a very easy solution: "View => Text boundaries" should show Page Layout Guides!

And I don't understand why insisting on these completely useless cornermarks?

Don't make Apache OpenOffice the better choice!
Comment 47 Cor Nouws 2016-01-25 14:23:30 UTC
(In reply to burnuser from comment #46)

Hi friend,

> As stated many times: The visibility of Page Layout Guides and Non-Printable
> characters is NOT the same!

Sure, you are completely right.
And the subject of this bug does not cover that. A separate handling is what is asked for. Hence let us please focus on bug 74386.

Be kind and try the engage people in coding that, please.

Cheers,
Cor