fdo#46073: Implemented soft boundaries only w/o non-printing chars